# coinsrc

./: .gitignore  CMakeLists.txt
spot/base/: Adapter.h  AdapterCrypto.h  BoostGZip.h  ConfigJsonFile.h  DataStruct.h  GlobalVariables.h  InitJsonFile.h  InitialData.h  InitialDataExt.h  Instrument.h  InstrumentManager.h  JsonDecode.h  MeasureLatency.h  MeasureLatencyCache.h  MeasureOrderToAck.h  MqDecode.h  MqStruct.h  OrderBook.h  Param.h  ParametersManager.h  Risk.h  SpotInitConfigTable.h  StrategyParameter.h  TradingPeriod.h  TradingPeriodManager.h
spot/bian/: BianApi.cc  BianApi.h  BianStruct.h  BnApi.cc  BnApi.h  CMakeLists.txt
spot/bybit/: BybitApi.cc  BybitApi.h  BybitStruct.h  CMakeLists.txt
spot/cache/: CacheAllocator.h  CacheNode.h  CacheNodeList.h  CyclicBuffer.h  MemoryPool.h
spot/comm/: AsyncLogging.cc  AsyncLogging.h  CMakeLists.txt  MqDispatch.cc  MqDispatch.h  MqUtils.cc  MqUtils.h  RabbitMqProcess.cc  RabbitMqProcess.h
spot/comm/tests/: AsyncLogging_test.cc  CMakeLists.txt  RabbitMqTest.cc  RabbitMqTest.h
spot/distributor/: DistClient.h  DistDef.h  DistServer.h
spot/gateway/: BianMdSpi.cc  BianMdSpi.h  BianTdSpi.cc  BianTdSpi.h  BybitMdSpi.cc  BybitMdSpi.h  BybitTdSpi.cc  BybitTdSpi.h  CMakeLists.txt  DistMdSpi.cc  DistMdSpi.h  GateWay.cc  GateWay.h  HuobTraderSpi.cc  HuobTraderSpi.h  HuobiFutureMdSpi.cc  HuobiFutureMdSpi.h  HuobiMdSpi.cc  HuobiMdSpi.h  MktDataLogStore.cc  MktDataLogStore.h  MktDataQueStore.cc  MktDataQueStore.h  MktDataStoreCallBack.h  OKxV5MdSpi.cc  OKxV5MdSpi.h  OKxV5TdSpi.cc  OKxV5TdSpi.h  OrderQueStore.cc  OrderQueStore.h  OrderStoreCallBack.h  ShmMdSpi.cc  ShmMdSpi.h  ShmMtSpi.cc  ShmMtSpi.h
spot/huobapi/: CMakeLists.txt  HuobApi.cc  HuobApi.h  HuobStruct.h
spot/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cc  Channel.h  Connector.cc  Connector.h  DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  Endian.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  PollPoller.cc  PollPoller.h  Poller.cc  Poller.h  SelectPoller.cc  SelectPoller.h  Socket.cc  Socket.h  SocketsOps.cc  SocketsOps.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Timer.cc  Timer.h  (+7 more)
spot/okex/: CMakeLists.txt  OkSwapApi.cpp  OkSwapApi.h  OkSwapStruct.h
spot/pollnet/: Efvi.h  Socket.h  TcpStream.h  Tcpdirect.h
spot/pyUtility/: Gaussian_fit.py  curveFit.py
spot/rapidjson/: CMakeLists.txt  document.h  rapidjson.h
spot/restful/: CurlMultiCurl.h  Uri.h  UriFactory.h  spotcurl.h  string.h
spot/risk/: CMakeLists.txt  spotRisk.cc  spotRisk.h  spotRiskBase.h
spot/sciComputeUti/: CMakeLists.txt  PythonEnv.cc  PythonEnv.h  curve_fit.cpp  gslCurve.cpp
spot/shmmd/: ShmClient.h  ShmManagement.h  ShmMdBase.h  ShmMdClient.h  ShmMdServer.h  ShmMoClient.h  ShmMoServer.h  ShmMtBase.h  ShmMtClient.h  ShmMtServer.h
spot/spotmd/: CMakeLists.txt  MdInterface.cc  MdInterface.h  SpotMd.cc
spot/strategy/: CMakeLists.txt  ConfigParameter.cc  ConfigParameter.h  DealOrders.cc  DealOrders.h  DealOrdersApi.cc  DealOrdersApi.h  Initializer.cc  Initializer.h  InstrumentOrder.cc  InstrumentOrder.h  MarketDataManager.cc  MarketDataManager.h  OrderController.cc  OrderController.h  Position.cc  Position.h  RmqWriter.cc  RmqWriter.h  Strategy.cc  Strategy.h  StrategyCircuit.cc  StrategyCircuit.h  StrategyCooker.cc  StrategyCooker.h  StrategyFR.cc  StrategyFR.h  StrategyFactory.cc  StrategyFactory.h  StrategyInstrument.cc  StrategyInstrument.h  StrategyInstrumentManager.cc  StrategyInstrumentManager.h  StrategyTimer.cc  StrategyTimer.h  StrategyUCArb.cc  StrategyUCArb.h  StrategyUCArb1.cc  StrategyUCArb1.h  StrategyUCEasy.cc  (+1 more)
spot/trade/: CMakeLists.txt  trading.cc
spot/utility/: BlockingQueue.h  BoundedBlockingQueue.h  CMakeLists.txt  Compatible.h  Condition.h  Copyable.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.h  Date.cc  Date.h  FileUtil.cc  FileUtil.h  FileWriter.cc  FileWriter.h  FixedBuffer.cc  FixedBuffer.h  LogFile.cc  LogFile.h  LogStream.cc  LogStream.h  LoggerEx.cc  LoggerEx.h  Logging.cc  Logging.h  Measure.cc  Measure.h  MeasureFunc.cc  MeasureFunc.h  Milo.h  Mutex.h  NonCopyAble.h  ReadIni.cc  ReadIni.h  SPSCQueue.h  StringPiece.h  Thread.cc  Thread.h  Timestamp.cc  Timestamp.h  (+14 more)
spot/websocket/: okcoinwebsocketapi.h  string.h  websocket.h  websocketapi.h
